# ask-the-docs

./: .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml
docker/: backend.Dockerfile  frontend.Dockerfile
fastapi_backend/: main.py  pyproject.toml
fastapi_backend/askthedocs_agent/: agent.py
fastapi_backend/askthedocs_agent/utils/: edges.py  nodes.py  state.py  tools.py
fastapi_backend/db/: vector_store.py
fastapi_backend/firecrawler/: firecrawler.py
fastapi_backend/models/: firecrawl.py  vector_store.py
fastapi_backend/routers/agent/: router.py
fastapi_backend/routers/firecrawler/: router.py
fastapi_backend/routers/vector_store/: router.py
fastapi_backend/src/: main.py
fastapi_backend/src/askthedocs_agent/: agent.py
fastapi_backend/src/askthedocs_agent/utils/: edges.py  nodes.py  state.py  tools.py
fastapi_backend/src/db/: vector_store.py
fastapi_backend/src/firecrawler/: firecrawler.py
fastapi_backend/src/models/: firecrawl.py  vector_store.py
fastapi_backend/src/routers/agent/: router.py
fastapi_backend/src/routers/firecrawler/: router.py
myapp/backend/: main.py
myapp/frontend/: app.py
src/askthedocs_agent/: agent.py
src/askthedocs_agent/utils/: nodes.py  tools.py
streamlit_app/: Home.py  pyproject.toml  streamlit_app.py
streamlit_app/crawler/: crawler.py
streamlit_app/pages/: 1_Chatbot.py  2_Crawler.py
streamlit_app/src/: Home.py
streamlit_app/src/pages/: 1_Chatbot.py  1_Crawler.py  2_Chatbot.py  2_Crawler.py
streamlit_app/src/utils/: footer.py  login.py
(+1 files in other folders)
