[project]
dependencies = [
  "fastapi[standard]>=0.115.12",
  "fastembed>=0.6.0",
  "firecrawl-py>=1.15.0",
  "loguru>=0.7.3",
  "pre-commit>=4.2.0",
  "pydantic>=2.11.1",
  "python-dotenv>=1.1.0",
  "qdrant-client>=1.13.3",
  "websockets==10.1"
]
description = "Add your description here"
name = "ask-the-docs"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"
