[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = ["fastapi-backend", "streamlit-app"]
name = "ask-the-docs"
requires-python = ">=3.12"
version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_backend", "streamlit_app"]

[tool.uv.sources]
fastapi-backend = {path = "fastapi_backend"}
streamlit-app = {path = "streamlit_app"}
